# MathForge

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ReadItCauseItsImportant.md  simple.mf  simple_ascii.mf  test_basic.mf
.github/workflows/: ci.yml
docs/: developer-guide.md
examples/: CMakeLists.txt  pythagorean.mf  triangle_inequality.mf
include/mathforge/ast/: expression.hpp  node.hpp  statement.hpp  visitor.hpp
include/mathforge/cli/: application.hpp
include/mathforge/codegen/: generator_base.hpp  latex_generator.hpp
include/mathforge/core/: exceptions.hpp  logger.hpp  unicode_normalize.hpp  version.hpp
include/mathforge/lexer/: lexer.hpp  token.hpp
include/mathforge/parser/: parser.hpp
include/mathforge/proof/: logic_rules.hpp  proof_engine.hpp  verifier.hpp
include/mathforge/semantic/: analyzer.hpp  symbol_table.hpp  type_checker.hpp
src/: main.cpp
src/ast/: CMakeLists.txt  expression.cpp  node.cpp  statement.cpp  visitor.cpp
src/cli/: CMakeLists.txt  application.cpp
src/codegen/: CMakeLists.txt  generator_base.cpp  latex_generator.cpp
src/core/: CMakeLists.txt  exceptions_new.cpp  logger.cpp  unicode_normalize.cpp  version.cpp  version_impl.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  token.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/proof/: CMakeLists.txt  logic_rules.cpp  proof_engine.cpp  verifier.cpp
src/semantic/: CMakeLists.txt  analyzer.cpp  symbol_table.cpp  type_checker.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_exceptions.cpp  test_logger.cpp  test_version.cpp
tests/lexer/: CMakeCache.txt  Makefile  cmake_install.cmake  golden_test.cpp  test_lexer.cpp  test_token.cpp
